<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp"
              tools:context="kr.ac.pknu.sme.myvoiceproject.fragments.AboutFragment">

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="음치탈출 프로젝트"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="만든이"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/programming"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/programming_persons"
                android:textSize="20dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/design"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/design"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
                android:textSize="20dp"
                android:text="@string/design_persons"/>
        </TableRow>
    </TableLayout>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:stretchColumns="1">



    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_marginTop="20dp"
        android:text="@string/libraries"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mpandroidchart"/>

            <TextView
                android:id="@+id/apache"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tarsos_dsp"/>

            <TextView
                android:id="@+id/gpl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
               />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/jodatime"/>

            <TextView
                android:id="@+id/apache2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
                />
        </TableRow>
    </TableLayout>



</LinearLayout>
