<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView

                android:padding="10dp"
                android:text="@string/average"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/average"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="25dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="10dp"
                android:text="@string/pitch_min"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/pitch_min"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="25dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="10dp"
                android:text="@string/pitch_max"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/pitch_max"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="25dp" />
        </TableRow>


        <TableRow android:paddingTop="20dp">

            <TextView
                android:padding="10dp"
                android:text="@string/personal_range"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/personal_range"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="21dp"
                android:textStyle="bold" />
        </TableRow>


    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <kr.ac.pknu.sme.myvoiceproject.activities.SheetMusic
            android:id="@+id/sheetwidget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sheet_muic"/>


    </TableLayout>
    <!--<ImageButton-->
    <!--android:id="@+id/play_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@drawable/ic_play_circle_filled_black_24dp"-->
    <!--android:layout_gravity="center"/>-->
</LinearLayout>
